--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
 	implementation 'io.netty:netty-transport:4.1.115.Final'
 	implementation 'io.netty:netty-handler:4.1.115.Final'
 	implementation 'io.netty:netty-codec-http:4.1.115.Final'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
 	runtimeOnly 'org.slf4j:slf4j-simple:2.0.16'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
 }
