--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,13 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
+	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.16.2'
 	runtimeOnly 'org.slf4j:slf4j-simple:2.0.16'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
 }
 
 application {
-	mainClass = 'tutorial.trucksDispatchGuiceMybatis.Application'
+	mainClass = 'tutorial.trucksDispatchGuiceMybatis.Starter'
 }
 
 test {
