--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
 	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.16.2'
+	implementation 'org.postgresql:postgresql:42.7.4'
 	runtimeOnly 'org.slf4j:slf4j-simple:2.0.16'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
 }
