--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,66 @@
 plugins {
-	id 'java'
-	id 'application'	
+    id 'java'
+    id 'application'
 }
 
 group = 'trucks-dispatch-guice-mybatis'
 version = '1.0.0-SNAPSHOT'
 
 repositories {
-	mavenLocal()
-	mavenCentral()
+    mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'com.google.inject:guice:7.0.0'
-	implementation 'org.mybatis:mybatis:3.5.16'
-	implementation 'org.mybatis:mybatis-guice:3.17'
-	implementation 'org.slf4j:slf4j-api:2.0.16'
-	implementation 'io.netty:netty-transport:4.1.115.Final'
-	implementation 'io.netty:netty-handler:4.1.115.Final'
-	implementation 'io.netty:netty-codec-http:4.1.115.Final'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
-	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
-	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
-	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.16.2'
-	implementation 'org.postgresql:postgresql:42.7.4'
-	runtimeOnly 'org.slf4j:slf4j-simple:2.0.16'
-	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
+    // Guice
+    implementation 'com.google.inject:guice:7.0.0'
+
+    // MyBatis
+    implementation 'org.mybatis:mybatis:3.5.16'
+    implementation 'org.mybatis:mybatis-guice:3.17'
+
+    // Logging
+    implementation 'org.slf4j:slf4j-api:2.0.16'
+    runtimeOnly 'org.slf4j:slf4j-simple:2.0.16'
+
+    // Netty
+    implementation 'io.netty:netty-transport:4.1.115.Final'
+    implementation 'io.netty:netty-handler:4.1.115.Final'
+    implementation 'io.netty:netty-codec-http:4.1.115.Final'
+
+    // Jackson
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'
+    implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.16.2'
+
+    // PostgreSQL
+    implementation 'org.postgresql:postgresql:42.7.4'
+
+    // Liquibase
+    implementation 'org.liquibase:liquibase-core:4.29.2'
+
+    // Testing
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
 }
 
 application {
-	mainClass = 'tutorial.trucksDispatchGuiceMybatis.Starter'
+    mainClass = 'tutorial.trucksDispatchGuiceMybatis.Starter'
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
+
+/*
+tasks.register("updateDb", org.liquibase.gradle.LiquibaseTask) {
+    group = "database"
+    description = "Run Liquibase update"
+
+    changelogSync = "src/main/resources/db/changelog/db.changelog-master.xml"
+    url = "jdbc:postgresql://localhost:15432/trucksdispatch"
+    username = "td"
+    password = "tdpass"
+    driver = "org.postgresql.Driver"
+}
+ */
