--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'jacoco'
 }
 
 group = 'trucks-dispatch-guice-mybatis'
@@ -42,6 +43,8 @@ dependencies {
 
     // Testing
     testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.mockito:mockito-core:5.19.0'
 }
 
 application {
@@ -50,17 +53,14 @@ application {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
 
-/*
-tasks.register("updateDb", org.liquibase.gradle.LiquibaseTask) {
-    group = "database"
-    description = "Run Liquibase update"
-
-    changelogSync = "src/main/resources/db/changelog/db.changelog-master.xml"
-    url = "jdbc:postgresql://localhost:15432/trucksdispatch"
-    username = "td"
-    password = "tdpass"
-    driver = "org.postgresql.Driver"
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
- */
